[jOOQ/jOOQ#7753] Java 11 fix